--- a/src/main/resources/static/view/campanha.html
+++ b/src/main/resources/static/view/campanha.html
@@ -13,10 +13,12 @@
 
                 <!--BOTÕES DO CARD-->
                 <ul class="header-dropdown m-r--5">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <li>
+                        <button type="button" class="btn btn-default btn-circle waves-effect waves-circle waves-float pull-right"
+                                data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
+                                style="background-color: #FFEB3B !important;">
                             <i class="material-icons">more_vert</i>
-                        </a>
+                        </button>
                         <ul class="dropdown-menu pull-right">
                             <li><a data-ng-click="limpar()" ng-if="!listagem">Limpar</a></li>
                             <li><a data-ng-click="changeToSave()" ng-if="!cadastro">Cadastrar</a></li>
@@ -27,7 +29,7 @@
             </div>
 
             <!--CADASTRO/EDIÇÂO-->
-            <div class="body" ng-hide="!cadastro" >
+            <div class="body" ng-hide="listagem" >
                 <form name="cadastroForm">
                     <label for="descricao">Descrição</label>
                     <div class="form-group">
@@ -58,12 +60,16 @@
                         </div>
                     </div>
                 </form>
+
                 <button data-ng-click="salvar()" type="button" ng-disabled="cadastroForm.$invalid"
-                        class="btn btn-primary m-t-15 waves-effect">SALVAR</button>
+                        class="btn btn-primary m-t-15 waves-effect" ng-if="cadastro">CADASTRAR</button>
+
+                <button data-ng-click="editar()" type="button" ng-disabled="cadastroForm.$invalid"
+                        class="btn btn-primary m-t-15 waves-effect" ng-if="edicao">EDITAR</button>
             </div>
             <!--TABELA DE LISTAGEM-->
             <div class="body table-responsive" ng-hide="!listagem">
-                <table class="table table-striped">
+                <table class="table table-striped table-condensed table-hover">
                     <thead>
                     <tr>
                         <th>ID</th>
@@ -77,7 +83,7 @@
                     <tr data-ng-repeat="campanha in campanhas">
                         <td>{{campanha.id}}</td>
                         <td>{{campanha.descricao}}</td>
-                        <td>{{campanha.dataInicio}}</td>
+                        <td>{{campanha.dataInicio | date:'dd/MM/yyyy'}}</td>
                         <td>{{campanha.dataFim | date:'dd/MM/yyyy'}}</td>
                         <td>
                             <i ng-click="seleciona(campanha)"class="material-icons" title="Editar">mode_edit</i>
@@ -89,40 +95,3 @@
         </div>
     </div>
 </div>
-
-<!--
-<div class="row clearfix">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div class="card">
-            <div class="header">
-                <h2>
-                    CAMPANHAS
-                </h2>
-            </div>
-            <div class="body table-responsive">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>DESCRIÇÃO</th>
-                            <th>DATA INICIO</th>
-                            <th>DATA FIM</th>
-                            <th>#</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr data-ng-repeat="campanha in campanhas">
-                            <td ng-click="seleciona(campanha)">{{campanha.id}}</td>
-                            <td ng-click="seleciona(campanha)">{{campanha.descricao}}</td>
-                            <td ng-click="seleciona(campanha)">{{campanha.dataInicio}}</td>
-                            <td ng-click="seleciona(campanha)">{{campanha.dataFim}}</td>
-                            <td>
-                                <i class="material-icons">mode_edit</i>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>-->
