--- a/src/main/resources/static/view/cargo.html
+++ b/src/main/resources/static/view/cargo.html
@@ -48,7 +48,7 @@
             </div>
             <!--TABELA DE LISTAGEM-->
             <div class="body table-responsive" ng-hide="!listagem">
-                <table class="table table-striped table-condensed table-hover">
+                <table class="table table-bordered table-striped table-hover dataTable js-exportable">
                     <thead>
                     <tr>
                         <th>ID</th>
@@ -66,6 +66,8 @@
                     </tr>
                     </tbody>
                 </table>
+
+                <at-pagination at-list="list" at-config="config"></at-pagination>
             </div>
         </div>
     </div>
