--- a/src/main/resources/static/view/campanha.html
+++ b/src/main/resources/static/view/campanha.html
@@ -69,6 +69,15 @@
             </div>
             <!--TABELA DE LISTAGEM-->
             <div class="body table-responsive" ng-hide="!listagem">
+
+                <label for="search">Filtro</label>
+                <div class="form-group col-lg-3">
+                    <div class="form-line">
+                        <input type="text" id="search" class="form-control"
+                               ng-model="search" placeholder="Entre com o filtro.">
+                    </div>
+                </div>
+
                 <table class="table table-striped table-condensed table-hover">
                     <thead>
                     <tr>
@@ -80,7 +89,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr data-ng-repeat="campanha in campanhas">
+                    <tr data-ng-repeat="campanha in campanhas | filter : search">
                         <td>{{campanha.id}}</td>
                         <td>{{campanha.descricao}}</td>
                         <td>{{campanha.dataInicio | date:'dd/MM/yyyy'}}</td>
