--- a/src/main/resources/static/view/cargo.html
+++ b/src/main/resources/static/view/cargo.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
 
-                <table class="table table-bordered table-striped table-hover dataTable js-exportable">
+                <table class="table table-striped table-condensed table-hover">
                     <thead>
                     <tr>
                         <th ng-click="sort('id')" class="col-sm-1" style="text-align: center">ID
