--- a/src/main/resources/static/view/usuario.html
+++ b/src/main/resources/static/view/usuario.html
@@ -69,21 +69,36 @@
             </div>
             <!--TABELA DE LISTAGEM-->
             <div class="body table-responsive" ng-hide="!listagem">
+
+                <label for="search">Filtro</label>
+                <div class="form-group col-lg-3">
+                    <div class="form-line">
+                        <input type="text" id="search" class="form-control"
+                               ng-model="search" placeholder="Entre com o filtro.">
+                    </div>
+                </div>
+
                 <table class="table table-striped table-condensed table-hover">
                     <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>NOME</th>
-                        <th>USUARIO</th>
-                        <th>#</th>
+                        <th ng-click="sort('id')" class="col-sm-1" style="text-align: center">ID
+                            <span class="glyphicon sort-icon" ng-show="sortKey=='id'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                        </th>
+                        <th ng-click="sort('nome')" style="text-align: center">NOME
+                            <span class="glyphicon sort-icon" ng-show="sortKey=='nome'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                        </th>
+                        <th ng-click="sort('usuario')" style="text-align: center">USUARIO
+                            <span class="glyphicon sort-icon" ng-show="sortKey=='usuario'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                        </th>
+                        <th style="text-align: center" class="col-sm-1" >#</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr data-ng-repeat="usuario in usuarios">
-                        <td>{{usuario.id}}</td>
-                        <td>{{usuario.nome}}</td>
-                        <td>{{usuario.usuario}}</td>
-                        <td>
+                    <tr dir-paginate="usuario in usuarios | orderBy:sortKey:reverse | filter:search | itemsPerPage:5">
+                        <td style="text-align: center">{{usuario.id}}</td>
+                        <td style="text-align: center">{{usuario.nome}}</td>
+                        <td style="text-align: center">{{usuario.usuario}}</td>
+                        <td style="text-align: center">
                             <i ng-click="seleciona(usuario)"class="material-icons" title="Editar">mode_edit</i>
                         </td>
                     </tr>
