--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8040,6 +8040,9 @@ html.ie11 .dropdown-menu ul.menu li a {
 
 html.ie11 .bs-searchbox .form-control {
   width: 90%; }
+.cep {
+  margin-top: 22px;
+}
 
 center{
   text-align: center !important;
