--- a/src/main/resources/static/view/dashboard.html
+++ b/src/main/resources/static/view/dashboard.html
@@ -6,7 +6,7 @@
             </div>
             <div class="content">
                 <div class="text">VALOR TOTAL CAPTADO</div>
-                <div class="number">R$1255,43</div>
+                <div class="number">{{valueOfDonationsOfMounth | currency}}</div>
             </div>
         </div>
     </div>
@@ -34,4 +34,39 @@
             </div>
         </div>
     </div>
+
+    <div class="row clearfix">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <div class="card">
+                <div class="header">
+                    <h2>
+                        GRAFICOS
+                    </h2>
+                </div>
+
+                <div class="body">
+                    <canvas id="base" class="chart-bar"
+                            chart-data="data" chart-labels="labels" chart-colors="colors"
+                            chart-dataset-override="datasetOverride" >
+                    </canvas>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <div class="card">
+                <div class="header">
+                    <h2>
+                        GRAFICOS
+                    </h2>
+                </div>
+
+                <div class="body">
+                    <canvas id="doughnut" class="chart chart-doughnut" chart-colors="colors"
+                            chart-data="data" chart-labels="labels">
+                    </canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
