--- a/src/main/resources/static/view/funcionarios.html
+++ b/src/main/resources/static/view/funcionarios.html
@@ -32,7 +32,7 @@
             <div class="body" ng-hide="listagem" >
                 <form name="cadastroForm">
                     <div class="row clearfix">
-                        <div class="col-sm-6">
+                        <div class="col-sm-4">
                             <label for="nome">Nome</label>
                             <div class="form-group">
                                 <div class="form-line">
@@ -41,7 +41,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-4">
                             <label for="nome">Sobrenome</label>
                             <div class="form-group">
                                 <div class="form-line">
@@ -50,51 +50,55 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row clearfix">
                         <div class="col-sm-4">
                             <label for="email">Email</label>
                             <div class="form-group">
                                 <div class="form-line">
                                     <input type="text" id="email" class="form-control"  ng-model="funcionarios.email" placeholder="Email do funcionario">
-                                 </div>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row clearfix">
                         <div class="col-sm-4">
-                            <label for="password">Senha</label>
+                            <b>CPF</b>
+                            <div class="input-group">
+                                <div class="form-line">
+                                    <input type="text" class="form-control key" placeholder="000.000.000-00"
+                                           ng-required="true" ng-minlength="5" ng-model="funcionarios.cpf">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4">
+                            <label for="cargos">Cargo</label>
                             <div class="form-group">
                                 <div class="form-line">
-                                    <input type="password" id="password" class="form-control" ng-model="funcionarios.senha" placeholder="Senha do funcionario">
+                                    <select class="form-control show-tick" name="cargos" id="cargos" ng-model="funcionarios.cargo.id">
+                                        <option ng-repeat="cg in cargos" value="{{cg.id}}">{{cg.descricao}}</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4" ng-required="true">
                             <label for="M">Sexo</label>
                             <div class="form-group">
-                                <input type="radio" name="sex" id="M" class="with-gap" ng-model="funcionarios.sexo">
+                                <input type="radio" name="sex" id="M" class="with-gap" value="M" ng-model="funcionarios.sexo" required>
                                 <label for="M">Masculino</label>
 
-                                <input type="radio" name="sex" id="F" class="with-gap" ng-model="funcionarios.sexo">
+                                <input type="radio" name="sex" id="F" class="with-gap" value="F" ng-model="funcionarios.sexo" required>
                                 <label for="F" class="m-l-20">Feminino</label>
                             </div>
                         </div>
                     </div>
                     <div class="row clearfix">
 
-                        <div class="col-sm-4">
-                            <b>CPF</b>
-                            <div class="input-group">
-                                <div class="form-line">
-                                    <input type="number" class="form-control key" placeholder="000.000.000-00" ng-model="funcionarios.cpf">
-                                </div>
-                            </div>
-                        </div>
-
                         <div class="col-md-4">
                             <b>Telefone</b>
                             <div class="input-group">
                                 <div class="form-line">
-                                    <input id="phone1" type="text" class="form-control mobile-phone-number" placeholder="(00) 0000-0000" ng-model="funcionarios.telefone1">
+                                    <input id="phone1" type="text" class="form-control mobile-phone-number" placeholder="(00) 0000-0000"
+                                           ng-required="true" ng-minlength="5" ng-model="funcionarios.telefone1">
                                 </div>
                             </div>
                         </div>
@@ -103,12 +107,25 @@
                             <b>Celular</b>
                             <div class="input-group">
                                 <div class="form-line">
-                                    <input id="phone2" type="text" class="form-control mobile-phone-number" placeholder="(00) 9 0000-0000" ng-model="funcionarios.telefone2">
+                                    <input id="phone2" type="text" class="form-control mobile-phone-number"
+                                           ng-required="true" ng-minlength="5" placeholder="(00) 9 0000-0000" ng-model="funcionarios.telefone2">
                                 </div>
                             </div>
                         </div>
+                        <div class="col-sm-4" ng-required="true">
+                            <label for="M">Situação</label>
+                            <div class="form-group">
+                                <input type="radio" name="situation" id="A" class="with-gap" value="A" ng-model="funcionarios.situacao" required>
+                                <label for="A">Ativo</label>
+
+                                <input type="radio" name="situation" id="I" class="with-gap" value="I" ng-model="funcionarios.situacao" required>
+                                <label for="I" class="m-l-20">Inativo</label>
+                            </div>
+                        </div>
+
                     </div>
                     <div ng-include="'view/cep.html'"></div>
+                    <div ng-include="'view/user.html'"></div>
                 </form>
 
                 <button data-ng-click="salvar()" type="button" ng-disabled="cadastroForm.$invalid"
@@ -119,27 +136,43 @@
             </div>
             <!--TABELA DE LISTAGEM-->
             <div class="body table-responsive" ng-hide="!listagem">
+
+                <label for="search">Filtro</label>
+                <div class="form-group col-lg-3">
+                    <div class="form-line">
+                        <input type="text" id="search" class="form-control"
+                               ng-model="search" placeholder="Entre com o filtro.">
+                    </div>
+                </div>
+
                 <table class="table table-striped table-condensed table-hover">
                     <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>NOME</th>
-                        <th>SEXO</th>
-                        <th>CPF</th>
-                        <th>EMAIL</th>
-                        <th>TELEFONE 1</th>
-                        <th>TELEFONE 2</th>
-                        <th>SITUAÇÃO</th>
-                        <th>ENDEREÇO</th>
-                        
-                        <th>#</th>
+                        <th class="col-sm-1" style="text-align: center">ID
+                        </th>
+                        <th style="text-align: center">NOME
+                        </th>
+                        <th style="text-align: center">SEXO
+                        </th>
+                        <th  style="text-align: center">CELULAR
+                        </th>
+                        <th style="text-align: center">SITUAÇÃO
+                        </th>
+                        <th style="text-align: center">CARGO
+                        </th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr data-ng-repeat="funcionario in funcionarios">
+                    <tr ng-repeat= "funcionario in funcionarios">
+                        <td style="text-align: center">{{funcionario.id}}</td>
+                        <td style="text-align: center">{{funcionario.nome}}</td>
+                        <td style="text-align: center">{{funcionario.sexo}}</td>
+                        <td style="text-align: center">{{funcionario.telefone2}}</td>
+                        <td style="text-align: center">{{funcionario.situacao}}</td>
+                        <td style="text-align: center">{{funcionario.cargo.descricao}}</td>
 
-                        <td>
-                            <i ng-click="seleciona(funcionario)" class="material-icons" title="Editar">mode_edit</i>
+                        <td style="text-align: center">
+                            <i ng-click="seleciona(funcionario)"class="material-icons" title="Editar">mode_edit</i>
                         </td>
                     </tr>
                     </tbody>
